--- a/02_Average_of_elements/index.html
+++ b/02_Average_of_elements/index.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Sum of elements</title>
+		<title>Average of elements</title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
         <!-- step 1: ciordit cod de la print 1 la n -->
 		<div class="container">
-			<h2>Sum of elements</h2>
-			<label for="number">Introduceti numerele,separate printr-un <span id="singur"> singur </span> spatiu</label>
+			<h2>Average of elements</h2>
+			<label for="number">Introduceti numerele,separate prin <span id="singur"> virgula si spatiu</span> </label>
 			<input type="text" id="arr" />
 			<button onclick="adaugaNumar()">Calculeaza</button>
 			<p>Rezultatul aici: </p>
