modificat 'for' in label ca sa fie matchy cu inputul

--- a/02_Average_of_elements/index.html
+++ b/02_Average_of_elements/index.html
@@ -10,7 +10,7 @@
         <!-- step 1: ciordit cod de la print 1 la n -->
 		<div class="container">
 			<h2>Average of elements</h2>
-			<label for="number">Introduceti numerele,separate prin <span id="singur"> virgula si spatiu</span> </label>
+			<label for="arr">Introduceti numerele,separate prin <span id="singur"> virgula si spatiu</span> </label>
 			<input type="text" id="arr" />
 			<button onclick="adaugaNumar()">Calculeaza</button>
 			<p>Rezultatul aici: </p>
