--- a/05_Search_for_an_element/index.html
+++ b/05_Search_for_an_element/index.html
@@ -10,9 +10,9 @@
         <!-- step 1: ciordit cod de la print 1 la n -->
 		<div class="container">
 			<h2>Search for an Element</h2>
-			<label for="number">Introduceti numerele, separate prin <span id="singur"> virgula si spatiu</span> </label>
+			<label for="arr">Introduceti numerele, separate prin <span id="singur"> virgula si spatiu</span> </label>
 			<input type="text" id="arr" />
-            <label for="number">Introduceti un <span id="singur"> singur</span> numar</label>
+            <label for="element">Introduceti un <span id="singur"> singur</span> numar</label>
 			<input type="text" id="element" />
 			<button onclick="adaugaNumar()">Calculeaza</button>
 			<p>Rezultatul aici: </p>
