--- a/06_Counting_Characters/index.html
+++ b/06_Counting_Characters/index.html
@@ -10,8 +10,8 @@
         <!-- step 1: ciordit cod de la print 1 la n -->
 		<div class="container">
 			<h2>Counting Characters</h2>
-			<label for="number">Introduceti textul dorit</label>
-			<input type="text" id="arr" />
+			<label for="str">Introduceti textul dorit</label>
+			<input type="text" id="str" />
             <form action="">
                 <input type="checkbox" id="option1" class="messageCheckbox" name="option1" value="upper">
                 <label for="option1"> UPPERCASE LETTERS</label><br>
