--- a/11_Using_Loops/index.html
+++ b/11_Using_Loops/index.html
@@ -14,18 +14,9 @@
 			<input type="text" id="nr" />
 			<button onclick="adaugaNumar()">Calculeaza</button>
 			<p>Rezultatul aici: </p>
-            <div class="coloane">
-                <div>
-                    <p id="output"></p>
-                </div>
-                <div>
-                    <p id="output2"></p>
-                </div>
-                <div>
-                    <p id="output3"></p>
-                </div>
+            <div id="output">
+                    <!-- <p id="output"></p> -->
             </div>
-		</div>
 		<script src="app.js"></script>
 	</body>
 </html>
