--- a/12_Prime_numbers/index.html
+++ b/12_Prime_numbers/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-    <script src="app.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Prime numbers</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+        <!-- step 1: ciordit cod de la print 1 la n -->
+		<div class="container">
+			<h2>Prime numbers</h2>
+			<label for="nr">Introduceti numarul maxim</span> </label>
+			<input type="text" id="nr" />
+			<button onclick="adaugaNumar()">Calculeaza</button>
+			<p>Rezultatul aici: </p>
+            <div>
+                    <p id="output"></p>
+            </div>
+		<script src="app.js"></script>
+	</body>
 </html>
