--- a/10_Checking_for_substrings/index.html
+++ b/10_Checking_for_substrings/index.html
@@ -12,8 +12,8 @@
 			<h2>Checking for substrings</h2>
 			<label for="str">Introduceti text</label>
 			<input type="text" id="str" />
-            <label for="element">Introduceti <span id="singur"> substring-ul </span> pe care doriti sa-l cautati</label>
-			<input type="text" id="element" />
+            <label for="substr">Introduceti <span id="singur"> substring-ul </span> pe care doriti sa-l cautati</label>
+			<input type="text" id="substr" />
 			<button onclick="adaugaNumar()" id="butt">Calculeaza</button>
 			<p>Rezultatul aici: </p>
             <p id="output"></p>
